clean code and hooks update

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "invent-analytics-movie-list",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.13.6",
+    "node": "13.8.0"
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
